css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root{

    /* Main theme colours */
    --first-colour:#0e2431;                 /* this is a declaration of a variable which has a colour */
    --second-colour: #6a59d1;
    --third-colour: #777;


    /* Hover colours */
    --hover-colour: #614fd0;

    /* Background colours */
    --body-bg-colour: #fefefe;
    --card-bg-colour: #fff;
    --modal-bg-colour:#fff;
    --bg-transparent-colour: rgba(0,0,0,0.1);
    --transparent-colour: rgba(0,0,0,0.1);
    --transparent-colour: rgba(106,89,209,0.1);
    --line-colour:#d7d7d7;

    /* Colour Filter */
    --colour-filter:invert(1);
    --menu-btn-filter:invert(0);

    /* Box shadow */
    --box-shadow: 0px 0px 20px rgba(0 0 0 / 10%);

    /* Font size */
    --small-font-size: 0.9em;
    --normal-font-size: 1em;

    /* Scroll bar colours */
    --scroll-bar-colour: #c5cadf;
    --scroll-thumb-colour: #70768a;
    --scroll-thumb-hover-colour: #454f6b;

}

.dark-theme{
    
    /* Main theme colours */
    --first-colour:#fefefe;                 /* this is a declaration of a variable which has a colour */
    --second-colour: #6a59d1;
    --third-colour: #a9afc3;


    /* Background colours */
    --body-bg-colour: #0e1b31;
    --card-bg-colour: #132347;
    --modal-bg-colour:#102048;
    --bg-transparent-colour: rgba(255,255,255,0.1);
    --transparent-colour-01: rgba(255,255,255,0.1);
    --line-colour:#d7d7d7;

    /* Colour Filter */
    --colour-filter:invert(0);
    --menu-btn-filter:invert(1);


  

    /* Scroll bar colours */
    --scroll-bar-colour: #c1ceff;
    --scroll-thumb-colour: #282f4e;
    --scroll-thumb-hover-colour: #454f6b;

}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

html{
    scroll-behavior: smooth;
    
}

body{
    color: var(--first-colour);
    background:var(--body-bg-colour);
    margin: 2em 0 0 0 ;
    transition: .5s ease;
   
}

body.modal-open{
    color: var(--first-colour);
    background:var(--body-bg-colour);
    margin: 2em 0 0 0 ;
    transition: .5s ease;
    overflow: hidden;
}

a{
    text-decoration: none;            /*  removes the defualt underline which comes within */
}

li{
    list-style: none;
}



    /* Scroll bar */
    ::-webkit-scrollbar{
        width: 10px;
        background: var(--scroll-bar-colour);
    }

    ::-webkit-scrollbar-thumb{
        background: var(--scroll-thumb-colour);
        border-radius: 2em;
    }

    ::-webkit-scrollbar-thumb:hover{
        background: var(--scroll-thumb-hover-colour);
    }




    /* Header */
    header{
        z-index: 99999;                /* higher index valued elments will appear on top of lower index valued elements */
        width: 100%;
        position: fixed;
        top: 0;
        left: 0;
        backdrop-filter: blur(20px);             /*   blurrs the content behind the header*/
        transition: .6s ease;
    }


    header.sticky{
        background: rgba(255, 255, 255, 0.048);
        box-shadow: var(--box-shadow);
    }

    .nav-bar{
        position: relative;
        height: calc(4rem + 1rem);
        max-width: 1250px;
        display:flex;
        justify-content: space-between;
        align-items: center;
        margin-left: auto;
        margin-right: auto;
        padding: 0 20px;
        transition: .6s ease;
    }

    .nav-menu-btn{
        display: none;

    }

    header.sticky .nav-bar{
        height: calc(2.5rem + 1rem);
    }

    .nav-bar .logo{
        color:var(--first-colour);
        font-size: 1.3em;
        font-weight: 600;

    }


    .nav-items a{
        color: var(--first-colour);
        font-size: var(--normal-font-size);
        font-weight: 500;
    
    }


    .nav-items a:not(:last-child){         /* this will select all the anchor tags except the last one */
        margin-right: 50px;
    }

    .nav-items a:hover{
        color: var(--second-colour);
    }

    .theme-btn{
        z-index: 999999;
        position: fixed;
        right: 0;
        top: 120px;
        background: var(--transparent-colour);
        backdrop-filter: blur(20px);
        width: 50px;
        height: 50px;
        font-size: 1.2em;
        border-radius: 5px 0 0 5px;
        box-shadow: var(--box-shadow);
        cursor: pointer;

    }

    .theme-btn .fa-sun, .theme-btn.sun .fa-moon{
        display: none;
    }

    .theme-btn.sun .fa-sun{
        display: block;
    }

    /* .nav-menu-btn{
        display: none;
    } */




    /* Home section */

    .home{
        position: relative;
        max-width: 1250px;
        min-height: 100vh;
        margin-left: auto;
        margin-right: auto;
        padding: 4rem 2rem;
        flex-direction: column;
        
    }

    .home-container{
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }


    .media-icons{
        display: flex;
        flex-direction: column;
        margin-right: 40px;
    }

    .media-icons a{
        color: var(--second-colour);
        font-size: 1.5em;
        margin: 10px 0;
    }

    .media-icons a:hover{
        color: var(--hover-colour);
    }

    .home-container .info h2{
        font-size: 4em;
        font-weight: 600;
        line-height: 70px;
    }

    .home-container .info h3{
        
        font-weight: 600;
        color: var(--third-colour);
        font-feature-settings: 1.3em;
        line-height: 50px;
    }
    .home-container .info p{
        color: var(--third-colour);
        font-size: var(--normal-font-size);
        max-width: 350px;
    }
/* ... */

